Receive order evenents from inventory-service